<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/activate_call_assistant"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:text="@string/activate_call_assistant_subtitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnActivateCallService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_check_black_24dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorGray"
            android:gravity="center"
            android:text="@string/contacts_permission"
            android:textAlignment="textStart"
            android:textColor="@color/colorGray"
            android:textSize="15sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_check_black_24dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorGray"
            android:gravity="center"
            android:text="@string/phone_call_permission"
            android:textAlignment="textStart"
            android:textColor="@color/colorGray"
            android:textSize="15sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_check_black_24dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorGray"
            android:gravity="center"
            android:text="@string/draw_overlay_permission"
            android:textAlignment="textStart"
            android:textColor="@color/colorGray"
            android:textSize="15sp"
            android:tint="@color/colorGray"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_check_black_24dp"
            android:drawablePadding="12dp"
            android:drawableTint="@color/colorGray"
            android:gravity="center"
            android:text="@string/manager_role_permission"
            android:textAlignment="textStart"
            android:textColor="@color/colorGray"
            android:textSize="15sp"
            android:tint="@color/colorGray"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnActivateCallService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorGreen"
        android:padding="12dp"
        android:text="@string/activate"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tvNotNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNotNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/not_now"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
